# ECMA

./: CMakeLists.txt  CMakeParams.h.in  README.md  generate_protoc.sh  launch_all.sh  param_inst_75.txt
cmake_extensions/: FindCplex.cmake
instances/: projet_5_8_1.sol  projet_5_8_10.sol  projet_5_8_2.sol  projet_5_8_3.sol  projet_5_8_4.sol  projet_5_8_5.sol  projet_5_8_6.sol  projet_5_8_7.sol  projet_5_8_8.sol  projet_5_8_9.sol
model/: model.tex
rapport/: rapport.tex  slides.tex
res/: annealing.csv  frontalWconnexity.csv  greedy.csv  greedyWconnexity.csv  results_protocol_buffer  synthetic_res_file.csv  synthetic_res_file_treated.csv.gsheet  test.csv  warmGreedyFrontal.csv
solutions/: 12_10_1-39.sol  12_10_1-40.sol  12_10_1-41.sol  12_10_10-115.sol  12_10_2-4.sol  12_10_3-64.sol  12_10_3-65.sol  12_10_4-62.sol  12_10_5-107.sol  12_10_6-49.sol  12_10_6-50.sol  12_10_6-51.sol  12_10_7-18.sol  12_10_7-50.sol  12_10_7-51.sol  12_10_7-52.sol  12_10_7-53.sol  12_10_8-75.sol  12_10_8-77.sol  12_10_8-78.sol  12_10_9-11.sol  12_10_9-44.sol  15_17_1-39.sol  15_17_1-40.sol  15_17_10-241.sol  15_17_10-242.sol  15_17_2-5.sol  15_17_2-8.sol  15_17_3-116.sol  15_17_3-120.sol  15_17_4-104.sol  15_17_4-74.sol  15_17_5-215.sol  15_17_6-91.sol  15_17_6-92.sol  15_17_7-51.sol  15_17_7-94.sol  15_17_8-131.sol  15_17_8-133.sol  15_17_8-139.sol  (+56 more)
src/alg/: annealingSolver.cpp  antSolver.cpp  bricks.cpp  bricks.h  connexification.cpp  connexification.h  constraintSolver.cpp  frontalSolver.cpp  frontalSolverWithoutConnexity.cpp  greedySolver.cpp  greedySolverWithoutConnexity.cpp  solver.cpp  solver.h  stupidSolver.cpp  testSolver.cpp
src/bo/: data.cpp  data.h  solution.cpp  solution.h
src/input/: instance_reader.cpp  instance_reader.h
src/main/: borne.h  main.cpp
src/output/: solution_writer.cpp  solution_writer.h
src/protoc/: ecma_protobuf.cc  ecma_protobuf.h  results_format.pb.cc  results_format.pb.h  results_format.proto
src/test/: tests_examples.cpp
src/utils/: helpers.cpp  helpers.h
